--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -508,16 +508,15 @@ We assumed an average exploitation rate of 12.5% for all CUs in forward projecti
 Exploitation rates for Interior Fraser Coho are only available at the SMU-level due to limited coded-wire indicator programs<!--LW: changed from stocks--> (1-2 CUs with indicators / year) that have been available for the Fishery Regulation Assessment Model used by the Pacific Salmon Commission for Coho Salmon [@pacificsalmoncommissionJointCohoTechnical2013]. As a result, empirically-based estimates of among-CU variability in exploitation rates are not available. However, there are reasons to expect exploitation rates to vary among CUs in a given year, including differences in freshwater fisheries.  We assumed that CU-specific variability in exploitation rates was half the common (SMU-level) interannual variability (CV=0.22), and varied this in sensitivity analyses from 0 and 0.44 to cover plausible bounds. Varying assumptions about variability in exploitation among CUs between CV = 0 and 0.44 in forward projections did not impact the distribution of correlations in spawner abundances in the projections (results not shown).  
 
 
-
 ### Results
 
-<!--
-  BC comment: Out of curiosity, if you conditioned your projections on the spawner abundance at the beginning of your empirical time series would you get an aggregate projection based LRP relationship that looks similar to the empirical one? If not why not. Might be worth discussing somewhere as part of pros and cons of alt methods. 
--->
 
 ***LRP Estimates***
-
+ 
 Aggregate abundance LRPs estimated using the Ricker model as a basis for forward projections were lower than those obtained when the Ricker_priorCap model was used, regardless of which probability threshold was used (Table \@ref(tab:projectedLRPs2020); Figure \@ref(fig:coho-projLRPCurveByOM)). This result is similar to the logistic regression LRPs, where LRPs derived using S~gen~ estimates from the Ricker_priorCap model were higher due to higher S~gen~ values.  The projected curve showing the probability of all CUs being above S~gen~ had a slope that was more gradual and further from the origin for the Ricker_priorCap model compared to the base Ricker model (Figure \@ref(fig:coho-projLRPCurveByOM)). When projection outputs from both stock-recruitment model formulations were combined prior to binning in order to create a model-averaged scenario (with equal weight assigned to both scenarios), the resulting probability curve was mid-way between the curves from the two individual models. In all cases, projected curves had higher scatter with increasing aggregate abundance, such that LRP estimates at probability thresholds of p = 0.90 and p = 0.99 were unstable.
+
+Projection LRPs were higher than logistic regression LRPs calculated using the same stock recruitment relationship.  While we did not explore the underlying cause of this pattern, or whether it was a general result or specific to this case study, it may occur because projection LRPs account for more sources of uncertainty than logistic regression LRPs.
+
 
 ```{r coho-projLRPCurveByOM, fig.cap="Probability of all CUs being above their lower benchmark of S\\textsubscript{gen} along a gradient in aggregate abundances within bins of 200 fish for two different stock-recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock-recruitment models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > lower benchmarks of S\\textsubscript{gen}. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-byOM.png")
@@ -569,7 +568,7 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance LRPs, we illustrate LRPs estimated from a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labeling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above Red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, which can be logistic regression (Logistic) or projection (Proj). Finally, the 'CU Status Method' can be based on the multidimensional algorithm within the Pacific Salmon Status Scanner in which CU abundance benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Alternatively, when only a single benchmark is used to characterize CU status, it can be based on S~gen~ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S~gen~ from the base Ricker model, it was labelled as "Abund: Logistic: Sgen_Ricker".  
+We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance LRPs, we illustrate LRPs estimated from a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labeling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above Red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, which can be logistic regression (Logistic) or projection (Proj). Finally, the 'CU Status Method' can be based on the multidimensional algorithm within the Pacific Salmon Status Scanner in which CU abundance benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Alternatively, when only a single benchmark is used to characterize CU status, it can be based on S~gen~ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S~gen~ from the base Ricker model, it was labelled as "Abund: Logistic: Sgen_Ricker".  Note that if a plot such as \@ref(fig:coho-statusPlot-withBars) was to be used to compare alternative LRP estimation methods during the development of an LRP for a specific SMU, the plot could be expanded to include the number of CUs in the Red zone and / or the names of CUs in the red zone. This type of information may help inform the development of rebuilding plans by highlighting CUs that are consistently in the Red zone. 
 
 
 ```{r coho-statusPlot-withBars, fig.cap="Historical evaluation of status relative to LRP options considered for Interior Fraser Coho. The black line shows the 2000-2020 generational mean aggregate spawning abundance to the SMU. Red bars indicate years in which SMU status would have been assessed as being below the LRP. Estimates of S\\textsubscript{gen} benchmarks and aggregate abundance LRPs were based on data available up to 2020", warning=FALSE, echo=FALSE, out.width = '85%',  fig.align="center"}
@@ -621,9 +620,14 @@ When considering CU status-based LRPs, comparisons between using a single metric
 Most methods evaluated for the Interior Fraser Coho case study relied on the evaluation of CU status relative to S~gen~. As a result, the method used to estimate S~gen~ had a large influence on results. S~gen~ estimates were higher for the Ricker_priorCap model compared to the base Ricker model, which meant that LRPs were more frequently triggered under this formulation. This pattern was observed for all four methods that relied on the Ricker_priorCap S~gen~ estimates.
 
 
-We considered alternative Ricker models for Interior Fraser Coho  to represent different assumptions regarding carrying capacity, which in turn affected productivity. This approach has also been used in previous analyses for this SMU. @arbeiderInteriorFraserCoho2020 used a model averaging approach with three SR models equally weighted when assessing recovery potential for the Interior Fraser Coho SMU (the base Ricker and Ricker_priorCap models we used, as well as a third depensatory mortality version that we did not consider). @kormanEvaluationFrameworkAssessing2019 also considered multiple Ricker model formulations when estimating reference points for the Interior Fraser Coho SMU; however, they opted to focus on results for the base Ricker model instead of using model averaging approaches. 
+We considered two alternative Ricker models for Interior Fraser Coho  to represent different assumptions regarding carrying capacity, which in turn affected productivity. This approach has also been used in previous analyses for this SMU. @arbeiderInteriorFraserCoho2020 used a model averaging approach with three SR models equally weighted when assessing recovery potential for the Interior Fraser Coho SMU (the base Ricker and Ricker_priorCap models we used, as well as a third depensatory mortality version that we did not consider). @kormanEvaluationFrameworkAssessing2019 also considered multiple Ricker model formulations when estimating reference points for the Interior Fraser Coho SMU; however, they opted to focus on results for the base Ricker model instead of using model averaging approaches. 
 
-One approach to accounting for uncertainty in underlying model structure is to integrate estimates of LRP status over those alternative structures. We demonstrate this approach when using projection estimates of aggregate abundance LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible, such as weighting based on prediction skill [@kellValidationStockAssessment2021].
+
+<!--Post-meeting revision:--> 
+Future analyses to characterize Interior Fraser Coho dynamics and estimate biological reference points could further explore model structure by considering more varied approaches. For example, life-cycle models that partition the life cycle into separate marine and freshwater components allow for more direct representation of smolt abundance and subsequent marine survival than our current approach of using smolt-to-adult survival as a covariate in adult-to-adult spawner recruitment models [@bradfordRiskAssessmentThompson1998]. Treating smolt abundance as a latent variable within a life-cycle model would allow the smolt-to-adult survival rate index to be directly applied to smolt abundance [@ohlbergerDemographicChangesChinook2018]. Modelling frameworks that incorporate hatchery enhancement into spawner-recruitment models while allowing for differential productivity between hatchery- and natural-origin spawners could also be considered in the future [@falcyDetectingEffectsManagement2018].
+
+
+The consideration of multiple model structures requires a decision on which model, or models, should be used to assess stock status. One approach to accounting for uncertainty in underlying model structure is to integrate estimates of LRP status over alternative structures. We demonstrate this approach when using projection estimates of aggregate abundance LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible, such as weighting based on prediction skill [@kellValidationStockAssessment2021].
 
 
 ### Logisic Regression LRPs
@@ -637,9 +641,18 @@ Taken together, these retrospective results highlight that caution should be use
 
 ### Projection LRPs
 
+
 Projection LRPs have the advantage of being able to incorporate uncertainty about current (and future) population and / or fishery dynamics into LRP estimates, whereas logistic regression LRPs represent conditions that have been previously experienced, which may or may not persist into the future. Projection LRPs also allow key structural uncertainties to be incorporated into LRP estimates through the combination of multiple projection scenarios. For example, in the current application, we chose not to apply a third formulation of the Ricker model with depensatory mortality that has been used previously [@kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. However, future applications of projection LRP methods for Interior Fraser coho could easily incorporate depensation as an additional scenario in a model-average approach if this was considered a key uncertainty to be represented.
 
 
 The sensitivity of projection LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, we set exploitation rates at the recent average as fishery restrictions since 1998 been stable. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above S~gen~ given that constant exploitation rate. However, Interior Fraser Coho are not managed using a fixed ER policy.  While harvest has been relatively constant for several recent years, target harvest rates can vary among years for several reasons, including fishery plans for other species (e.g., Fraser Sockeye Salmon). For years in which target exploitation rates are increased, the LRP would also need be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above S~gen~. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection LRPs are not static measures of serious harm, as commonly developed for other stocks and species.
 
+
 Projection LRPs were also sensitive to the level of covariation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in higher LRPs as the relationship between aggregate abundance and CU status weakens because random dynamics among CUs will increase the probability of any one CU having Red status. We recommend that possible instabilities in projections be evaluated for this SMU, and other applications for projection LRPs, which could arise due to changes in covariation of spawner abundance among CUs due to CUs with different productivity levels responding differently to exploitation.
+
+
+### Distributional-based benchmarks
+
+The distribution of spawning abundances among smaller populations or sub-populations within a CU is recognized as an important component of CU status [@dfoCanadaPolicyConservation2005]. We relied on previously established distributional targets for Interior Fraser Coho to demonstrate the development of LRPs based on finer-scale distributional metrics. These metrics were based on a short-term recovery target of of 1000 spawners in at least 50% of sub-populations [@ifcrtConservationStrategyCoho2006].  While these targets were used for recent recovery planning analyses [@arbeiderInteriorFraserCoho2020], they were not considered as part of the 2015 WSP Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015] and are included in the Pacific Salmon Scanner Tool because formal distributional benchmarks have not been identified under the WSP. We recommend research on the development and evaluation of metrics and benchmarks of distribution of spawning within CUs, as well as the development of guidelines on how to incorporate these into CU-level assessments under the WSP.
+
+
