--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -38,7 +38,8 @@
   author = {Araki, Hitoshi and Cooper, Becky and Blouin, Michael S},
   date = {2009},
   journaltitle = {Biol. Lett.},
-  pages = {4},
+  volume = {5},
+  pages = {621--624},
   doi = {10.1098/rsbl.2009.0315},
   langid = {english},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\NKXLKWIE\\Araki et al. - 2009 - Carry-over effect of captive breeding reduces repr.pdf}
@@ -161,8 +162,9 @@
   author = {Bradford, M J and Wood, C},
   date = {2004},
   journaltitle = {DFO Canadian Science Advisory Secretariat Research Document},
+  shortjournal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
   volume = {2004/128},
-  pages = {iv + 48},
+  pages = {iv + 48 p.},
   url = {http://www.dfo-mpo.gc.ca/csas-sccs/publications/resdocs-docrech/2004/2004_128-eng.htm},
   abstract = {The purpose of this paper is to review the scientific basis for the recovery objectives contained in the September 2004 draft recovery plans for Cultus and Sakinaw Lake sockeye salmon and Interior Fraser coho salmon. First, a brief review of recovery objectives for a variety of other North American salmonid recovery plans was conducted, and we concluded that the objectives of the 3 plans were consistent with current practice; the main difference was that the objectives were more quantitative than was usual in other jurisdictions. Next, objectives that were developed for purpose of conserving genetic resources in the endangered populations were compared to the recent literature and were found to be minimally adequate. In a review of population viability analysis (PVA) and its application to setting conservation targets, we concluded that demographically-based conservation goals in the order of 1,000 annual spawners was only adequate if there was an additional objective of maintaining positive population growth. We detailed and reviewed the evidence for depensatory mortality in Cultus Lake on juvenile sockeye salmon and concurred with the recovery team that there was reason to be concerned that at low spawner abundance reduced smolt production rates could inhibit recovery. Lastly, we documented the evidence used to develop a total escapement estimate for Interior Fraser coho salmon that would meet recovery objectives for individual populations and sub-populations. A comparison of the recovery objectives with recent historical abundances indicates that the recovery targets for the 3 salmon populations are all less than one third of recent maxima. Thus the teams have been consistent in interpreting recovery as an abundance at the lower range of the spectrum of values they might have considered, well below the carrying capacity of their habitats. We conclude that there is a need to develop plans to maintain population productivity to ensure persistence at the proposed recovery targets.}
 }
@@ -184,7 +186,7 @@
   date = {2020},
   journaltitle = {Can. Tech. Rep. Fish. Aquat. Sci.},
   volume = {3401},
-  pages = {xiii + 214p},
+  pages = {xiii + 214 p.},
   url = {https://science-catalogue.canada.ca/record=4089004~S6},
   langid = {english},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\FUJCLK5Y\\Brown et al. - 2020 - 2020 Summary of Abundance Data for Chinook Salmon .pdf}
@@ -197,7 +199,8 @@
   number = {FAO Fisheries Technical Paper. No. 347},
   pages = {83p.},
   institution = {{FAO}},
-  location = {{Rome}}
+  location = {{Rome}},
+  url = {https://www.fao.org/3/v8400e/v8400e00.htm}
 }
 
 @article{candyPatternsHomingStraying2000,
@@ -452,11 +455,16 @@
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf}
 }
 
-@article{dfoFisheryDecisionMakingFramework2009,
-  title = {A {{Fishery Decision-Making Framework Incorporating}} the {{Precautionary Approach}}},
+@online{dfoFisheryDecisionmakingFramework2009,
+  title = {A Fishery Decision-Making Framework Incorporating the Precautionary Approach},
   author = {DFO},
   date = {2009},
-  url = {https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm}
+  url = {https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm},
+  urldate = {2020-10-16},
+  abstract = {A fishery decision-making framework incorporating the precautionary approach},
+  langid = {english},
+  annotation = {Last Modified: 2009-03-23},
+  file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\5Y2LPZ9X\\Government of Canada - 2009 - A fishery decision-making framework incorporating .pdf;C\:\\Users\\WarkentinL\\Zotero\\storage\\UIYHN55Z\\precaution-eng.html}
 }
 
 @article{dfoGuidanceAssessingThreats2014,
@@ -520,6 +528,16 @@
   author = {DFO},
   date = {2009},
   url = {https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/forage-eng.htm}
+}
+
+@online{dfoPreliminary2021Salmon2021,
+  title = {Preliminary 2021 Salmon Outlook},
+  author = {DFO},
+  date = {2021},
+  url = {https://www.pac.dfo-mpo.gc.ca/pacific-smon-pacifique/science/research-recherche/smon-outlook-perspective-eng.html},
+  urldate = {2022-03-31},
+  langid = {english},
+  annotation = {Last Modified: 2022-01-12}
 }
 
 @article{dfoProceedingsNationalPeer2016,
@@ -726,7 +744,7 @@
   title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{{\emph{Oncorhynchus keta}}}} {{Walbaum}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
   author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
   date = {2004},
-  shortjournal = {DFO Can. Sci. Advis. Res. Doc.},
+  shortjournal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
   volume = {2004/007},
   pages = {vi + 45 p.},
   url = {https://www.dfo-mpo.gc.ca/csas-sccs/publications/resdocs-docrech/2004/2004_007-eng.htm},
