changed names of links for urls in appendix

--- a/guidelinesWP/08-appendix.Rmd
+++ b/guidelinesWP/08-appendix.Rmd
@@ -3,16 +3,14 @@
 # RESOURCES FOR THE IMPLEMENTATION OF LRPS {#app:links}
 
 
-- For single metrics of status used under the Wild Salmon Policy, see the Github repository [WSP-Metrics-Pkg](https://github.com/Pacific-salmon-assess/WSP-Metrics-Pkg)
+- For single metrics of status used under the Wild Salmon Policy, see the Github repository [WSP Metrics](https://github.com/Pacific-salmon-assess/WSP-Metrics-Pkg)
 <!--CH remove for now, as they are private:
 - For watershed-area model, link to Carrie's repository (currently private due to data concerns)
 -	For multi-dimensional CU-status, link to Rapid Multidimensional Scanner Tool 
 -->
-- For implementation of CU status-based and aggregate abundance LRPs to three case studies, see the Github repository [pacific-salmon-assess/SalmonLRP_RetroEval](https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval)
-- For estimation of correlations among CUs within SMUs, see the Github repository [pacific-salmon-assess/lrp-smu-corr](https://github.com/Pacific-salmon-assess/lrp-smu-corr)
-- For write-up of this working paper, see the Github repository
-
-[pacific-salmon-assess/SalmonLRP_csasdown](https://github.com/Pacific-salmon-assess/SalmonLRP_csasdown)
+- For implementation of CU status-based and aggregate abundance LRPs to three case studies, see the Github repository on [case studies] (https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval)
+- For estimation of correlations among CUs within SMUs, see the Github repository on [CU correlations](https://github.com/Pacific-salmon-assess/lrp-smu-corr)
+- For write-up of this working paper, see the Github repository on [csasdown](https://github.com/Pacific-salmon-assess/SalmonLRP_csasdown)
 
 All data manipulation and projections were performed in R.  TMB and TMBStan were used for estimation of stock-recruitment parameters and benchmarks for logistic regression and projection LRPs.
 
