Revisions from CSAS review

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -568,7 +568,7 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance LRPs, we illustrate LRPs estimated from a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labeling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above Red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, which can be logistic regression (Logistic) or projection (Proj). Finally, the 'CU Status Method' can be based on the multidimensional algorithm within the Pacific Salmon Status Scanner in which CU abundance benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Alternatively, when only a single benchmark is used to characterize CU status, it can be based on S~gen~ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S~gen~ from the base Ricker model, it was labelled as "Abund: Logistic: Sgen_Ricker".  Note that if a plot such as \@ref(fig:coho-statusPlot-withBars) was to be used to compare alternative LRP estimation methods during the development of an LRP for a specific SMU, the plot could be expanded to include the number of CUs in the Red zone and / or the names of CUs in the red zone. This type of information may help inform the development of rebuilding plans by highlighting CUs that are consistently in the Red zone. 
+We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance LRPs, we illustrate LRPs estimated from a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labeling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above Red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, which can be logistic regression (Logistic) or projection (Proj). Finally, the 'CU Status Method' can be based on the multidimensional algorithm within the Pacific Salmon Status Scanner in which CU abundance benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Alternatively, when only a single benchmark is used to characterize CU status, it can be based on S~gen~ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S~gen~ from the base Ricker model, it was labelled as "Abund: Logistic: Sgen_Ricker". In the future, \@ref(fig:coho-statusPlot-withBars) could be expanded to include the number of CUs in the Red zone and / or the names of CUs in the Red zone. This type of information may help inform the development of rebuilding plans by highlighting CUs that are consistently in the Red zone.  
 
 
 ```{r coho-statusPlot-withBars, fig.cap="Historical evaluation of status relative to LRP options considered for Interior Fraser Coho. The black line shows the 2000-2020 generational mean aggregate spawning abundance to the SMU. Red bars indicate years in which SMU status would have been assessed as being below the LRP. Estimates of S\\textsubscript{gen} benchmarks and aggregate abundance LRPs were based on data available up to 2020", warning=FALSE, echo=FALSE, out.width = '85%',  fig.align="center"}
