--- a/caseStudyWP/01-chap1.Rmd
+++ b/caseStudyWP/01-chap1.Rmd
@@ -1,7 +1,7 @@
 # INTRODUCTION
 
 
-Under recent amendments to Canada's *Fisheries Act*, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be more than 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. LRPs have not yet been developed at the SMU-level for Pacific Salmon. This working paper summarizes the application of methods for estimating SMU-level LRPs to three Pacific salmon case study SMUs. These case study applications have been used to inform the development of guidelines for identifying LRPs for Pacific Salmon, which are presented in the companion paper by Holt et al. (in review)^[Holt, C., Holt, K., Warkentin, L., Wor, C., Connors, B., Grant, S., and Huang, A.-M., Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review].  
+Under recent amendments to Canada's *Fisheries Act*, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be more than 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. The definition and delineation of SMUs for Pacific Salmon has been undertaken within the Pacific region of DFO in response to the national-level requirement for "major fish stocks" to be identified and monitored under the *Fisheries Act*. LRPs have not yet been developed at the SMU-level for Pacific Salmon. This working paper summarizes the application of methods for estimating SMU-level LRPs to three Pacific salmon case study SMUs. These case study applications have been used to inform the development of guidelines for identifying LRPs for Pacific Salmon, which are presented in the companion paper by Holt et al. (in review)^[Holt, C., Holt, K., Warkentin, L., Wor, C., Connors, B., Grant, S., and Huang, A.-M., Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review].  
 
 
 While LRPs under the *Fisheries Act* are required at the SMU-level, monitoring and management under DFO's WSP occurs at the finer CU level. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations’ [@dfoCanadaPolicyConservation2005].  Methods to assess CU status have been identified for a range of data types, including WSP Integrated Assessment methods (hereafter called 'WSP assessments') that use expert opinion to combine multiple metrics into a single estimate of CU status [e.g., @grant2017FraserSockeye2020]. Metrics used to assess WSP CU status include spawner abundances, short- and long-term trends in abundance, and distribution of abundance [@holtIndicatorsStatusBenchmarks2009]. Lower and upper benchmarks on those metrics are used to assign status into one of three zones, with the zones Green, Amber and Red, representing increasingly depleted populations that require increasing management intervention [@dfoCanadaPolicyConservation2005]. A more fulsome description of these concepts is provided in Holt et al., (in review).
