--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -46,7 +46,7 @@
   title = {Interior {{Fraser Coho Salmon Recovery Potential Assessment}}},
   author = {Arbeider, Michael and Ritchie, Lynda and Braun, Doug and Jenewein, Brittany and Rickards, Karen and Dionne, Kaitlyn and Holt, Carrie and Labelle, Marc and Nicklin, Pete and Mozin, Paul and Grant, Paul and Parken, Chuck and Bailey, Richard},
   year = {2020},
-  journal = {DFO Can. Sci. Advis. Res. Doc.},
+  journal = {Canadian Science Advisory Secretariat Research Document},
   volume = {2020/025},
   pages = {xi + 211p},
   langid = {english}
@@ -58,7 +58,7 @@
   author = {Atlas, William I. and Selbie, Daniel T. and Holt, Carrie A. and Cox-Rogers, Steve and Carr-Harris, Charmaine and Pitman, Kara J. and Moore, Jonathan W.},
   year = {2020},
   month = sep,
-  journal = {Limnol Oceanogr},
+  journal = {Limnology and Oceanography},
   volume = {65},
   number = {9},
   pages = {2205--2219},
@@ -115,7 +115,7 @@
   author = {Bourret, Samuel L. and Caudill, Christopher C. and Keefer, Matthew L.},
   year = {2016},
   month = sep,
-  journal = {Rev Fish Biol Fisheries},
+  journal = {Reviews in Fish Biology and Fisheries},
   volume = {26},
   number = {3},
   pages = {375--403},
@@ -130,7 +130,7 @@
   author = {Bradford, Michael J and Myers, Ransom A and Irvine, James R},
   year = {2000},
   month = apr,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {57},
   number = {4},
   pages = {677--686},
@@ -146,7 +146,7 @@
   author = {Bradford, Michael J. and Braun, Douglas C.},
   year = {2021},
   month = aug,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {78},
   number = {8},
   pages = {1084--1095},
@@ -161,7 +161,7 @@
   title = {A Review of Biological Principles and Methods Involved in Setting Minimum Population Sizes and Recovery Objectives for the {{September}} 2004 Drafts of the {{Cultus}} and {{Sakinaw Lake}} Sockeye Salmon and {{Interior Fraser}} Coho Salmon Recovery Plans},
   author = {Bradford, M J and Wood, C},
   year = {2004},
-  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2004/128},
   pages = {iv + 48 p.},
   abstract = {The purpose of this paper is to review the scientific basis for the recovery objectives contained in the September 2004 draft recovery plans for Cultus and Sakinaw Lake sockeye salmon and Interior Fraser coho salmon. First, a brief review of recovery objectives for a variety of other North American salmonid recovery plans was conducted, and we concluded that the objectives of the 3 plans were consistent with current practice; the main difference was that the objectives were more quantitative than was usual in other jurisdictions. Next, objectives that were developed for purpose of conserving genetic resources in the endangered populations were compared to the recent literature and were found to be minimally adequate. In a review of population viability analysis (PVA) and its application to setting conservation targets, we concluded that demographically-based conservation goals in the order of 1,000 annual spawners was only adequate if there was an additional objective of maintaining positive population growth. We detailed and reviewed the evidence for depensatory mortality in Cultus Lake on juvenile sockeye salmon and concurred with the recovery team that there was reason to be concerned that at low spawner abundance reduced smolt production rates could inhibit recovery. Lastly, we documented the evidence used to develop a total escapement estimate for Interior Fraser coho salmon that would meet recovery objectives for individual populations and sub-populations. A comparison of the recovery objectives with recent historical abundances indicates that the recovery targets for the 3 salmon populations are all less than one third of recent maxima. Thus the teams have been consistent in interpreting recovery as an abundance at the lower range of the spectrum of values they might have considered, well below the carrying capacity of their habitats. We conclude that there is a need to develop plans to maintain population productivity to ensure persistence at the proposed recovery targets.}
@@ -221,7 +221,7 @@
   editor = {Lee, Tien Ming},
   year = {2019},
   month = feb,
-  journal = {J Appl Ecol},
+  journal = {Journal of Applied Ecology},
   volume = {56},
   number = {2},
   pages = {481--490},
@@ -236,7 +236,7 @@
   author = {Chagaris, David and Drew, Katie and Schueller, Amy and Cieri, Matt and Brito, Joana and Buchheister, Andre},
   year = {2020},
   month = nov,
-  journal = {Front. Mar. Sci.},
+  journal = {Frontiers in Marine Science},
   volume = {7},
   pages = {606417},
   issn = {2296-7745},
@@ -302,7 +302,7 @@
   author = {Connors, Brendan and Malick, Michael J. and Ruggerone, Gregory T. and Rand, Pete and Adkison, Milo and Irvine, James R. and Campbell, Robert and Gorman, Kristen},
   year = {2020},
   month = jun,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {77},
   number = {6},
   pages = {943--949},
@@ -339,7 +339,7 @@
   author = {Crozier, Lisa G. and Burke, Brian J. and Chasco, Brandon E. and Widener, Daniel L. and Zabel, Richard W.},
   year = {2021},
   month = dec,
-  journal = {Commun Biol},
+  journal = {Communications Biology},
   volume = {4},
   number = {1},
   pages = {222},
@@ -356,7 +356,7 @@
   editor = {Dias, Jo{\~a}o Miguel},
   year = {2019},
   month = jul,
-  journal = {PLoS ONE},
+  journal = {PLOS ONE},
   volume = {14},
   number = {7},
   pages = {e0217711},
@@ -387,7 +387,7 @@
   author = {Debertin, Allan J. and Irvine, James R. and Holt, Carrie A. and Oka, Gladys and Trudel, Marc},
   year = {2017},
   month = jul,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {74},
   number = {7},
   pages = {1077--1087},
@@ -402,7 +402,7 @@
   title = {Assessment of the {{Interior Fraser Coho Salmon}} ({{{\emph{Oncorhynchus kisutch}}}}) {{Management Unit Relative}} to the 2006 {{Conservation Strategy Recovery Objectives}}},
   author = {Decker, A Scott and Hawkshaw, Michael A and Patten, Bruce A and Sawada, Joel and Jantz, A Lester},
   year = {2014},
-  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  journal = {Canadian Science Advisory Secretariat Research Document},
   volume = {2014/086},
   pages = {xi + 64 p},
   langid = {english}
@@ -470,7 +470,7 @@
   title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus tshawytscha}}}}) {{Under}} the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2016},
-  journal = {DFO Can. Sci. Advis. Sec. Sci.  Advis. Rep.},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
   volume = {2016/042},
   langid = {english}
 }
@@ -531,17 +531,6 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\ZFZXSM8T\\Proceedings of the National Peer Review on the Dev.pdf}
 }
 
-@article{dfoProceedingsNationalPeer2016a,
-  title = {Proceedings of the {{National Peer Review}} on the {{Development}} of {{Technical Guidelines}} for the {{Provision}} of {{Scientific Advice}} on the {{Various Elements}} of {{Fisheries}} and {{Oceans Canada Precautionary Approach Framework}}; {{February}} 28-{{March}} 1, 2012},
-  author = {DFO},
-  year = {2016},
-  journal = {Canadian Science Advisory Secretariat Proceedings Series},
-  volume = {2015/005},
-  pages = {100},
-  langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\KT372HJ4\\Proceedings of the National Peer Review on the Dev.pdf}
-}
-
 @article{dfoProceedingsNationalWorkshop2013,
   title = {Proceedings of the {{National Workshop}} for {{Technical Expertise}} in {{Stock Assessment}} ({{TESA}}): {{Maximum Sustainable Yield}} ({{MSY}}) {{Reference Points}} and the {{Precautionary Approach}} When {{Productivity Varies}}; {{December}} 13-15, 2011},
   author = {{DFO}},
@@ -593,11 +582,23 @@
   title = {Wild Salmon Policy Biological Status Assessment for Conservation Units of Interior {{Fraser River Coho Salmon}} ({{{\emph{Oncorhynchus kisutch}}}})},
   author = {DFO},
   year = {2015},
-  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
   volume = {2015/022},
   abstract = {The Wild Salmon Policy (WSP) outlines Fisheries and Oceans Canada's (DFO) strategies for managing Canada's salmon resources. The status assessment (Strategy 1) involves developing benchmarks and determining the biological status of Conservation Units (CUs).},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\7HP2LMEW\\Wild salmon policy biological status assessment fo.pdf}
+}
+
+@article{dornerEvaluatingAlternativeMethods2013,
+  title = {Evaluating Alternative Methods for Monitoring and Estimating Responses of Salmon Productivity in the {{North Pacific}} to Future Climatic Change and Other Processes: {{A}} Simulation Study},
+  author = {Dorner, Brigitte and Holt, Kendra R. and Peterman, Randall M. and Jordan, Chris and Larsen, David P. and Olsen, Anthony R. and {Abdul-Aziz}, Omar I.},
+  year = {2013},
+  journal = {Fisheries Research},
+  volume = {147},
+  pages = {10--23},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2013.03.017},
+  abstract = {We used empirically based simulation modelling of 48 sockeye salmon (O. nerka) populations to examine how reliably alternative monitoring designs and fish stock assessment methods can distinguish between changes in density-dependent versus density-independent components of productivity and identify the relative contribution of a climate-driven covariate. We explored a wide range of scenarios for ocean and freshwater conditions and the response of salmon productivity (adult recruits per spawner) to those conditions. Our results show that stock assessments based on historical relationships between salmon productivity and climate-driven oceanographic conditions will likely perform poorly when those relationships change, even when such changes are anticipated and incorporated into stock assessment models in a timely manner. Estimating the relative importance of climate-driven oceanographic influences as a driver of sockeye productivity will be difficult, especially if climatic changes occur rapidly and concurrently with other disturbances. Thus, better understanding of the mechanisms by which climatic changes and other drivers influence salmon productivity may be essential to avoid undesirable management outcomes. As well, an expansion of monitoring of juvenile salmon abundances on more salmon stocks is needed to help distinguish the effects of different drivers.}
 }
 
 @article{dornerSpatialTemporalPatterns2018,
@@ -605,7 +606,7 @@
   author = {Dorner, Brigitte and Catalano, Matthew J. and Peterman, Randall M.},
   year = {2018},
   month = jul,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {75},
   number = {7},
   pages = {1082--1095},
@@ -651,7 +652,7 @@
   author = {Eckert, Lauren E. and Ban, Natalie C. and Frid, Alejandro and McGreer, Madeleine},
   year = {2018},
   month = feb,
-  journal = {Aquatic Conserv: Mar Freshw Ecosyst},
+  journal = {Aquatic Conservation: Marine and Freshwater Ecosystems},
   volume = {28},
   number = {1},
   pages = {158--166},
@@ -671,13 +672,30 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\YATXENNJ\\Edwards et al. - Pacific Ocean Perch (Sebastes alutus) stock assess.pdf}
 }
 
+@article{fieldSeaSkyImpacts2011,
+  title = {Sea to Sky: Impacts of Residual Salmon-Derived Nutrients on Estuarine Breeding Bird Communities},
+  shorttitle = {Sea to Sky},
+  author = {Field, Rachel D. and Reynolds, John D.},
+  year = {2011},
+  month = oct,
+  journal = {Proceedings of the Royal Society B: Biological Sciences},
+  volume = {278},
+  number = {1721},
+  pages = {3081--3088},
+  issn = {0962-8452, 1471-2954},
+  doi = {10.1098/rspb.2010.2731},
+  abstract = {Pacific salmon (               Oncorhynchus               spp.) returning to streams around the North Pacific Rim provide a nutrient subsidy to these ecosystems. While many species of animals feed directly on salmon carcasses each autumn, salmon-derived nutrients can also be stored in coastal habitats throughout the year. The effects of this storage legacy on vertebrates in other seasons are not well understood, especially in estuaries, which can receive a large portion of post-spawning salmon nutrients. We examine the effects of residual salmon-derived nutrients, forest habitats and landscape features on summer breeding birds in estuary forests. We compared models containing environmental variables and combined chum (               Oncorhynchus keta               ) and pink (               Oncorhynchus gorbuscha               ) salmon biomass to test predictions concerning bird density and diversity. We discovered that total bird, insectivore, golden-crowned kinglet and Pacific wren densities and Shannon's diversity in the summer were strongly predicted by salmon biomass in the autumn. For most metrics, this relationship approaches an asymptote beyond 40 000 kg of salmon biomass. Foliage height diversity, watershed catchment area and estuary area were also important predictors of avian communities. Our study suggests that the legacy of salmon nutrients influences breeding bird density and diversity in estuaries that vary across a wide gradient of spawning salmon biomass.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\GFTGKGMT\\Field and Reynolds - 2011 - Sea to sky impacts of residual salmon-derived nut.pdf}
+}
+
 @article{francisDataWeightingStatistical2011,
   title = {Data Weighting in Statistical Fisheries Stock Assessment Models},
   author = {Francis, R.I.C. Chris},
   editor = {Hilborn, Ray},
   year = {2011},
   month = jun,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {68},
   number = {6},
   pages = {1124--1138},
@@ -705,7 +723,6 @@
   title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{{\emph{Oncorhynchus keta}}}} {{Walbaum}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
   author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
   year = {2004},
-  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
   volume = {2004/007},
   pages = {vi + 45 p.},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\95CI8IG5\\282237.pdf}
@@ -715,7 +732,6 @@
   title = {The 2017 {{Fraser Sockeye Salmon}} ({{{\emph{Oncorhynchus nerka}}}}) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
   author = {Grant, S C H and Holt, C A and Pestal, G and Davis, B M and MacDonald, B L},
   year = {2020},
-  journal = {DFO Can.  Sci. Advis. Sec. Res. Doc.},
   volume = {2018/017},
   pages = {vii + 211 p},
   langid = {english},
@@ -761,11 +777,26 @@
   publisher = {{Springer Science}}
 }
 
+@article{hockingConsumptionDistributionSalmon2006,
+  title = {Consumption and Distribution of Salmon ( {{{\emph{Oncorhynchus}}}} Spp.) Nutrients and Energy by Terrestrial Flies},
+  author = {Hocking, Morgan D and Reimchen, Thomas E},
+  year = {2006},
+  month = sep,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {63},
+  number = {9},
+  pages = {2076--2086},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/f06-110},
+  abstract = {Anadromous Pacific salmon (Oncorhynchus spp.) subsidize terrestrial food webs with their nutrients and carcasses, a process driven largely by selective foraging by bears (Ursus spp.). We quantify wildlife transfer of salmon carcasses to riparian zones on two watersheds in coastal British Columbia and estimate total terrestrial fly production from remnant carcasses. Large-bodied chum salmon (Oncorhynchus keta) were transferred into the forest at a greater rate than were pink salmon (Oncorhynchus gorbuscha) (chum salmon mass\hspace{0.6em}=\hspace{0.6em}6089\textendash 11 031 kg, 16\%\textendash 48\% of salmon run; pink salmon mass\hspace{0.6em}=\hspace{0.6em}2266\textendash 2808 kg, 4\%\textendash 6\% of salmon run). Blow flies (genus Calliphora) and other Diptera dominated colonization ({$>$}90\% of salmon carcasses). Between the two watersheds, 196 and 265 g of Calliphora larvae per metre of spawning length (4 and 7 million larvae for whole watersheds) were generated from salmon carcass transfer. Stable isotope analysis of {$\delta$}               15               N and {$\delta$}               13               C of spring-emerging adult Calliphora revealed that {$>$}80\% of individuals had salmon-based signatures. Flies are a dominant consumer and vector of salmon nutrients in terrestrial habitats and supplement the diet of at least 16 vertebrate and 22 invertebrate species. Anticipated further declines of salmon in the North Pacific can be expected to further erode the complex associations coupling marine and terrestrial ecosystems.},
+  langid = {english}
+}
+
 @article{holtbyConservationUnitsPacific2007,
   title = {Conservation {{Units}} for {{Pacific Salmon}} under the {{Wild Salmon Policy}}},
   author = {Holtby, L. Blair and Ciruna, Kristine A.},
   year = {2007},
-  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2007/070},
   pages = {viii + 350 p.},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\A26ES6NW\\Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf}
@@ -791,7 +822,7 @@
   author = {Holt, Carrie A. and Irvine, James R.},
   year = {2013},
   month = dec,
-  journal = {Envir. Conserv.},
+  journal = {Environmental Conservation},
   volume = {40},
   number = {4},
   pages = {345--355},
@@ -806,27 +837,11 @@
   title = {Evaluating {{Benchmarks}} of {{Biological Status}} for {{Data-limited Conservation Units}} of {{Pacific Salmon}}, {{Focusing}} on {{Chum Salmon}} in {{Southern BC}}},
   author = {Holt, Carrie and Davis, Brooke and Dobson, Diana and Godbout, Lyse and Luedke, Wilf and Tadey, Joe and Van Will, P},
   year = {2018},
-  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2018/011},
   pages = {ix + 87 p.},
   abstract = {Status assessments for Chum Salmon (Oncorhynchus keta) under the Wild Salmon Policy (WSP) have been limited, in part because recruitment time-series required to calculate stock- recruitment based benchmarks are not consistently available. Alternative benchmarks have been proposed for data-limited Conservation Units (CUs) using percentiles of the observed spawner abundance time-series. However, these benchmarks have not been evaluated against stock-recruitment benchmarks currently used to assess status on abundances for data-rich CUs. Our goals were to evaluate percentile-based benchmarks against stock-recruitment based benchmarks accounting for high uncertainties and possible biases in spawner abundances, catches, recruitment estimates, and age-at-maturity. We used two approaches to evaluate benchmarks based on a retrospective comparison through the historical record and a prospective simulation model under numerous hypothetical future scenarios. We demonstrate an approach for providing assessments that accounts for uncertainties in benchmarks, and provide advice on the applicability of percentile-based benchmarks for data-limited CUs of Chum Salmon relative to stock-recruitment benchmarks used for data-rich CUs. In general, our results support the application of percentile-based benchmarks for data-limited CUs of Chum Salmon when productivity is moderate to high ({$>$}2.5 recruits/spawner) and harvest rates are low to moderate ({$\leq$}40\%). However, we suggest further evaluation of percentile benchmarks (and the consideration of alternatives) when productivity is expected to be low and/or harvest rates high. Under these conditions, concurrent declines in abundances and percentile benchmarks can results in status assessments that are more optimistic than those from stock-recruitment benchmarks due to shifting baselines.},
   langid = {english}
-}
-
-@article{holtEvaluatingBenchmarksPopulation2011a,
-  title = {Evaluating {{Benchmarks}} of {{Population Status}} for {{Pacific Salmon}}},
-  author = {Holt, Carrie A. and Bradford, Michael J.},
-  year = {2011},
-  month = apr,
-  journal = {North American Journal of Fisheries Management},
-  volume = {31},
-  number = {2},
-  pages = {363--378},
-  issn = {0275-5947, 1548-8675},
-  doi = {10.1080/02755947.2011.578525},
-  abstract = {Canada is developing an indicator approach for assessing the biological status of conservation units of Pacific salmon Oncorhynchus spp. under its Wild Salmon Policy that is based, in part, on the abundance of adult fish. Two benchmarks will be used to place populations in one of three abundance categories. The lower benchmark is proposed to be at a level that allows for a substantial buffer between it and the abundance that would result in a population's being assessed as at risk of extirpation based on quantitative criteria used by the Committee on the Status of Endangered Wildlife in Canada. Using Monte Carlo simulation, we evaluated eight candidate lower benchmarks calculated from parameters of the stock\textendash recruit relationship against two criteria, the probability of extirpation over 100 years and the probability of recovery to spawner abundances that result in the maximum sustainable yield in one or three generations. For modeled populations of moderate size (unfished equilibrium abundances {$>$}25,000) and moderate productivity ({$\sim$}four adult recruits produced per spawner at low spawner abundances), all benchmarks protected populations from extirpation when harvest restrictions were imposed at the lower benchmark. For small or unproductive populations, none of the benchmarks was adequate to prevent populations from being at risk of extirpation. However, those benchmarks that covaried with the productivity parameter of the stock\textendash recruitment relationship performed better and are preferred to those that were derived mainly from estimates of habitat capacity.},
-  langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\FMR8NNYQ\\Holt and Bradford - 2011 - Evaluating Benchmarks of Population Status for Pac.pdf}
 }
 
 @techreport{holtEvaluationBenchmarksConservation2009,
@@ -853,7 +868,7 @@
   title = {Indicators of {{Status}} and {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}},
   author = {Holt, Carrie A and Cass, Alan and Holtby, Blair and Riddell, Brian},
   year = {2009},
-  journal = {DFO Can. Sci. Advis. Res. Doc.},
+  journal = {Canadian Science Advisory Secretariat Science Research Document},
   volume = {2009/058},
   pages = {viii + 74 p},
   abstract = {The goal of Canada's Wild Salmon Policy (WSP) is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity. To achieve that goal, the WSP requires that biological status be assessed for all geographically, ecologically, and genetically distinct populations, or Conservation Units (CUs). One component of that assessment is identifying quantifiable metrics of biological status and benchmarks along those metrics. Here, we provide a toolkit of metrics and benchmarks of status, which will set the stage for future CU assessments. Specifically, we propose a multi-criteria approach for assessing status that uses information on current abundances, trends in abundance over time, distribution of spawners, and fishing mortality relative to stock productivity. That approach captures the multiple dimensions of population status that will be important to achieve WSP goals better than assessments based on abundances alone. Furthermore, any redundancy in information content among criteria may allow for increased flexibility when assessing stocks that differ widely in data quantity and quality. Here, we identify quantifiable metrics and candidate benchmarks drawn from the scientific literature and previous management experience. Using a simulation model, we further evaluate a subset of those benchmarks on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. Finally, we apply those metrics and candidate benchmarks to two example CUs, Takla/Trembleur sockeye salmon (Early Stuart run-timing group of the Fraser River) and Hecate Strait Lowlands pink salmon (odd year).},
@@ -865,12 +880,28 @@
   title = {A Quantitative Tool for Evaluating Rebuilding Plans for {{Pacific}} Salmon},
   author = {Holt, C. A and Freshwater, C. and Holt, K.R. and Huang, A.-M.},
   year = {2020},
-  journal = {Can. Tech. Rep. Fish. Aquat. Sci.},
+  journal = {Canadian Technical Report of Fisheries and Aquatic Sciences},
   volume = {3402},
   pages = {v + 26 p.},
   abstract = {"Rebuilding plans are required for depleted stocks under the Fish Stock Provisions of Canada's revised Fisheries Act (2019) and DFO's Sustainable Fisheries Framework (2009). The overall goal of this project was to create a tool for developing and evaluating the harvest component of rebuilding plans for Pacific salmon, which evaluates trade-offs between conservation objectives and other fisheries management objectives"--Abstract.},
   langid = {english},
   annotation = {OCLC: 1199014307}
+}
+
+@article{holtWillDepletedPopulations2010,
+  title = {Will Depleted Populations of {{Pacific}} Salmon Recover under Persistent Reductions in Survival and Catastrophic Mortality Events?},
+  author = {Holt, Carrie A.},
+  year = {2010},
+  month = dec,
+  journal = {ICES Journal of Marine Science},
+  volume = {67},
+  number = {9},
+  pages = {2018--2026},
+  issn = {1095-9289, 1054-3139},
+  doi = {10.1093/icesjms/fsq117},
+  abstract = {Abstract             Holt, C. A. 2010. Will depleted populations of Pacific salmon recover under persistent reductions in survival and catastrophic mortality events? \textendash{} ICES Journal of Marine Science, 67: 2018\textendash 2026. Under Canada's Wild Salmon Policy, benchmarks between zones of biological status are required to distinguish populations requiring conservation attention (Red and Amber zones) from those that can be managed for production (Green zone). The recovery of depleted populations (i.e. from Red to Green) will depend in part on the choice of the lower benchmark. At a minimum, that benchmark should be set high enough to allow recovery within an acceptable time-frame in the absence of targeted fishing. Currently, benchmarks are evaluated and selected using simulation models that assess the probability of recovery to spawner abundance associated with the maximum sustainable yield within a specified time-frame. Guided by case examples, the evaluation is extended to include two scenarios of future conditions: persistent reductions in survival rates below the replacement level; and increased frequency of catastrophic mortality (die-off) events. Probabilities of recovery appear to be more sensitive to persistent reductions in survival than to increased probability of die-off events. The current lower benchmarks on spawner abundance and fishing mortality might not be sufficiently precautionary to allow recovery under those conditions.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SX7KAKL3\\Holt 2010.pdf;C\:\\Users\\HoltC\\Zotero\\storage\\YWIIK6ZQ\\Holt - 2010 - Will depleted populations of Pacific salmon recove.pdf}
 }
 
 @techreport{hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009,
@@ -921,7 +952,7 @@
   editor = {Hilborn, Ray},
   year = {2012},
   month = jul,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {69},
   number = {7},
   pages = {1150--1163},
@@ -951,7 +982,7 @@
   title = {Evaluation Framework for Assessing Potential {{Pacific Salmon Commission}} Reference Points for Population Status and Associated Allowable Exploitation Rates for {{Strait}} of {{Georgia}} and {{Fraser River Coho Salmon Management Units}}},
   author = {Korman, J and Sawada, J and Bradford, M J},
   year = {2019},
-  journal = {DFO Can. Sci. Advis. Res. Doc.},
+  journal = {Canadian Science Advisory Secretariat Research Document},
   volume = {2019/001},
   pages = {vii + 81 p.},
   langid = {english},
@@ -999,7 +1030,7 @@
   author = {Lee, Lynn Chi and Thorley, Joe and Watson, Jane and Reid, Mike and Salomon, Anne Katherine},
   year = {2019},
   month = mar,
-  journal = {CONSERVATION LETTERS},
+  journal = {Conservation Letters},
   volume = {12},
   number = {2},
   issn = {1755-263X, 1755-263X},
@@ -1055,7 +1086,7 @@
   editor = {Belgrano, Andrea},
   year = {2016},
   month = jan,
-  journal = {PLoS ONE},
+  journal = {PLOS ONE},
   volume = {11},
   number = {1},
   pages = {e0146009},
@@ -1110,7 +1141,7 @@
   author = {McKechnie, Iain and Lepofsky, Dana and Moss, Madonna L. and Butler, Virginia L. and Orchard, Trevor J. and Coupland, Gary and Foster, Fredrick and Caldwell, Megan and Lertzman, Ken},
   year = {2014},
   month = mar,
-  journal = {Proc Natl Acad Sci USA},
+  journal = {Proceedings of the National Academy of Sciences},
   volume = {111},
   number = {9},
   pages = {E807-E816},
@@ -1223,7 +1254,7 @@
   title = {Habitat-Based Methods to Estimate Escapement Goals for Data Limited {{Chinook}} Salmon Stocks in {{British Columbia}}, 2004},
   author = {Parken, Charles K. and McNicol, Richard E. and Irvine, James R.},
   year = {2006},
-  journal = {DFO Can. Sci. Advis. Res. Doc.},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2006/83},
   pages = {vii + 67 p.},
   abstract = {Fisheries and Oceans Canada requires escapement goals for Chinook salmon (Oncorhynchus tshawytscha) stocks to evaluate their status and achieve objectives established by international agreements and domestic policy. Unfortunately the data typically needed to establish these `goals', using stock-recruitment techniques, are expensive to gather and are, for most stocks, lacking. This prompted us to develop the habitat-based approach to generate escapement goals described in this report. We related productive capacity to freshwater habitat area based on results from a meta-analysis of 25 Chinook stocks. Stocks were distributed between central Alaska and northern Oregon and represented a broad range of environments and life history. We developed an allometric model that predicted Smsy and Srep (spawners required to produced maximum sustained yield and replacement, respectively) from the watershed area and assessed the model's performance. The model adequately predicted the Smsy and Srep for an independent data source and out-performed a current interim method applied to British Columbia (BC) Key Streams. The habitat-based approach adequately predicted Smsy and Srep for seven case study examples, although it overestimated the productive capacity of stocks with relatively small spawning areas. Our habitat-based model can generate biologically-based escapement goals, rooted in fish-production relationships, for data limited stocks over a broad range of environments. This simple approach requires easily acquirable data and makes few assumptions. However, spawner escapements of known accuracy and reliability are required, which may impede implementation for some systems. The approach is well-suited for most data limited stocks in BC and can be tested and refined as new stock-recruitment data become available. Since the habitat-based method was more accurate than the interim method for BC Key Streams, we recommend applying it for data limited stocks in BC to establish escapement goals until more stock-specific data are available.}
@@ -1245,7 +1276,6 @@
   title = {Evaluating the Consequences of Common Assumptions in Run Reconstructions on {{Pacific}} Salmon Biological Status Assessments},
   author = {Peacock, Stephanie J and Hertz, Eric and Holt, Carrie A and Connors, Brendan and Freshwater, Cameron and Connors, Katrina},
   year = {2020},
-  journal = {Can. J. Fish. Aquat. Sci.},
   volume = {77},
   pages = {1904--1920},
   doi = {http://dx.doi.org/10.1139/cjfas-2019-0432},
@@ -1260,7 +1290,7 @@
   editor = {Fleming, Ian},
   year = {2012},
   month = apr,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {69},
   number = {4},
   pages = {681--694},
@@ -1370,7 +1400,7 @@
   author = {Price, Michael H.H. and Connors, Brendan M. and Candy, John R. and McIntosh, Brenda and Beacham, Terry D. and Moore, Jonathan W. and Reynolds, John D.},
   year = {2019},
   month = nov,
-  journal = {CONSERVATION LETTERS},
+  journal = {Conservation Letters},
   volume = {12},
   number = {6},
   issn = {1755-263X, 1755-263X},
@@ -1385,7 +1415,7 @@
   author = {Price, Michael H. H. and Moore, Jonathan W. and Connors, Brendan M. and Wilson, Kyle L. and Reynolds, John D.},
   year = {2021},
   month = jul,
-  journal = {J Appl Ecol},
+  journal = {Journal of Applied Ecology},
   volume = {58},
   number = {7},
   pages = {1477--1486},
@@ -1508,7 +1538,7 @@
   editor = {Grantham, Hedley},
   year = {2021},
   month = jan,
-  journal = {J Appl Ecol},
+  journal = {Journal of Applied Ecology},
   volume = {58},
   number = {1},
   pages = {114--124},
@@ -1516,6 +1546,20 @@
   doi = {10.1111/1365-2664.13789},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\SITPEASH\\Scheuerell et al. - 2021 - An integrated population model for estimating the .pdf}
+}
+
+@article{schindlerPacificSalmonEcology2003,
+  title = {Pacific Salmon and the Ecology of Coastal Ecosystems},
+  author = {Schindler, Daniel E. and Scheuerell, Mark D. and Moore, Jonathan W. and Gende, Scott M. and Francis, Tessa B. and Palen, Wendy J.},
+  year = {2003},
+  month = feb,
+  journal = {Frontiers in Ecology and the Environment},
+  volume = {1},
+  number = {1},
+  pages = {31--37},
+  issn = {1540-9295},
+  doi = {10.1890/1540-9295(2003)001[0031:PSATEO]2.0.CO;2},
+  langid = {english}
 }
 
 @article{schindlerPopulationDiversityPortfolio2010a,
@@ -1578,7 +1622,7 @@
   author = {Staton, Benjamin A. and Catalano, Matthew J. and Fleischman, Steven J. and Ohlberger, Jan},
   year = {2021},
   month = dec,
-  journal = {Can. J. Fish. Aquat. Sci.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {78},
   number = {12},
   pages = {1755--1769},
@@ -1643,7 +1687,7 @@
   title = {Genetically {{Based Targets}} for {{Enhanced Contributions}} to {{Canadian Pacific Chinook Salmon Populations}}},
   author = {Withler, R.E. and Bradford, M.J. and Willis, D.M. and Holt, C.A.},
   year = {2018},
-  journal = {DFO Can. Sci.  Advis. Sec. Res. Doc.},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2018/019},
   pages = {xii + 88 p.}
 }
