Revisions to guidelines paper

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -372,6 +372,10 @@ Projection LRPs may be inappropriate when:
 -->
 Furthermore, projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, CU status-based LRPs and harvest control rules that manage CUs independently may be more appropriate. <!--CH omit? : When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socioeconomic objectives.--> Although higher LRPs under asychronous dynamics may initially be counter-intuitive due to the stability asynchrony provides to aggregate time-series [@schindlerPopulationDiversityPortfolio2010a], independent trajectories among components increases risks of individual component CUs dropping below lower benchmarks in mixed-CU fisheries necessitating higher LRPs. 
 
+
+<!--KH: Next paragraph added as a revision after CSAS meeting -->
+Model evaluation for projection LRPs is more subjective than for logistic regression LRPs.  The suitability of logistic regression model fits can be evaluated using statistical model fit diagnostics, which makes the evaluation process relatively objective and repeatable. However, the added assumptions and analytical decisions required to parameterize projection models is a more subjective process in which outcomes may vary among analysts.  Peer review, as described in step 6 above, will be required to support the development of projection LRPs.
+
 ### Step 9: Apply aggregate abundance LRPs to derive SMU-level status and compare to status against CU status-based LRPs
         
 Aggregate abundance methods are then applied to derive LRPs based on the guidance above. See Appendix \@ref(app:case-studies) and Holt et al. (In review) for example applications. When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'provisional' until the status of all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
